<resources>
    <!-- Dashboard -->
    <string name="app_name">MyWallet</string>
    <string name="txt_welcome">Olá! Bem vindo!</string>
    <string name="txt_balance">Saldo: R$ 0,00</string>
    <string name="total_transaction">Transações: 0</string>
    <string name="btn_extract">Ver Extrato</string>
    <string name="btn_transfer">Transferir</string>

    <!-- Register -->
    <string name="txt_register_title">Cadastro</string>

    <!-- Login -->
    <string name="txt_title_welcome">Bem-vindo!</string>
    <string name="txt_enter">Entrar</string>
    <string name="txt_register">Não tem uma conta? Cadastre-se</string>

    <!-- Transaction -->
    <string name="et_name">Nome</string>
    <string name="et_email">Email</string>
    <string name="et_password">Senha</string>
    <string name="btn_register">Cadastrar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="new_transfer">Nova Transferência</string>
    <string name="text_recipient">Email do destinatário</string>
    <string name="input_amount">Valor</string>
    <string name="btn_transfer_amount">Transferir</string>
    <string name="statement_title">Extrato de Transações</string>
    <string name="amount_value">Saldo: R$ %.2f</string>
    <string name="transactions_value">Transações: %1$d</string>

    <!-- Adapter -->
    <string name="formatted_amount">R$ %.2f</string>
    <string name="from_to_format">De: Usuário %1$d Para: Usuário %2$d</string>
    <string name="date_format">dd/MM/yyyy</string>

    <!-- Alerts -->
    <string name="transfer_success">Transferência realizada!</string>
    <string name="login_success">Login realizado!</string>
    <string name="field_generic_error">Preencha todos os campos</string>
    <string name="field_generic_correctly_error">Preencha os campos corretamente</string>
    <string name="register_app_success">Cadastro realizado com sucesso</string>
    <string name="user_not_register">Usuário não autenticado</string>

</resources>