<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_24dp"
    android:background="#FAFAFA">

    <ImageView
        android:layout_width="@dimen/margin_48dp"
        android:layout_height="@dimen/margin_48dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_wallet"
        app:layout_constraintBottom_toBottomOf="@+id/txtWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/txt_welcome"
        android:textSize="@dimen/text_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/txt_balance"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@dimen/text_24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

    <ImageView
        android:layout_width="@dimen/margin_24dp"
        android:layout_height="@dimen/margin_24dp"
        android:src="@drawable/ic_money"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtBalance"
        app:layout_constraintStart_toEndOf="@+id/txtBalance"
        app:layout_constraintTop_toTopOf="@+id/txtBalance"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/txtTotalTransacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_transaction"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintTop_toBottomOf="@id/txtBalance"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExtract"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_extract"
        android:background="@drawable/bg_button_primary"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txtTotalTransacoes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_32dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTransfer"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_transfer"
        android:background="@drawable/bg_button_secondary"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/btnExtract"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
