<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:padding="@dimen/margin_24dp">

    <TextView
        android:id="@+id/txtTitleWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title_welcome"
        android:textSize="@dimen/text_24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_48dp" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_edittext"
        android:padding="@dimen/margin_12dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitleWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_32dp"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/bg_edittext"
        android:padding="@dimen/margin_12dp"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_enter"
        android:background="@drawable/bg_button_primary"
        android:textColor="@android:color/white"
        android:padding="@dimen/margin_12dp"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:textSize="@dimen/text_14sp"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>
